--- a/src/index.html
+++ b/src/index.html
@@ -5,7 +5,7 @@
     </head>
     <body>
         <h3>Edison Zhuang</h3>
-        <img src="https://media-exp1.licdn.com/dms/image/C5603AQG-12luo0JTmg/profile-displayphoto-shrink_200_200/0/1620256065951?e=1657756800&v=beta&t=WwzaU9UjW-iO09twp6t-FUvnh_gNbt5yrXLsOezZNHY" />
+        <img class="avatar" src="https://m.media-amazon.com/images/I/71qokUI2ypL._AC_SX679_.jpg" />
         <p>My name is Edison. I am a software developer. I am proficient in:</p>
         <ul>
             <li>HTML</li>
