--- a/assignment/index.html
+++ b/assignment/index.html
@@ -1,8 +1,35 @@
 <html>
     <head>
         <link rel="stylesheet" href="styles.css" />
+        <link rel = "stylesheet" href = "https://fonts.googleapis.com/css2?family=Montserrat:wght@100..900">
+        <title>Profile Page</title>
     </head>
+
     <body>
-        <!-- Add Code Here -->
+        <div>
+            <div class = "top">
+                <img class = "cookie" src = "https://rlv.zcache.com/cookie_monster_me_just_here_for_the_cookies_square_sticker-r4c813983264c47eabd66e6ea8de45694_0ugra_8byvr_736.webp" />
+                <br><br>
+                <h3>Hello my name is Ong Jin Hui.</h3>
+                <br>
+                <p>I aspire to be a software developer in my next job.<br><br>Hopefully by then,<br>I would have built an arsenal of projects to showcase the credibility of my capability.</p>
+            </div>
+            <div class = "btm">
+                <br>
+                <p>My <a href = "https://github.com/OngJinHui">GitHub</a> profile is a work in progress.</p>
+                <br>
+                <p>The things that I like to do to relax my mind:</p>
+                <br>
+                <ul>
+                    <li>Looking at the outside view from the office pantry</li>
+                    <li>Drinking a warm cup of coffee</li>
+                    <li>People watch</li>
+                    <li>Walking in the light rain</li>
+                    <li>Feeling the breeze of the sea on my face</li>
+                </ul>
+            </div>
+        </div>
+        
     </body>
+    
 </html>
