--- a/assignment/index.html
+++ b/assignment/index.html
@@ -1,8 +1,46 @@
 <html>
-    <head>
-        <link rel="stylesheet" href="styles.css" />
-    </head>
-    <body>
-        <!-- Add Code Here -->
-    </body>
+  <head>
+    <link rel="stylesheet" href="styles.css" />
+  </head>
+  <body class="body">
+    <!-- Add Code Here -->
+    <h1>General Infomation</h1>
+    <div class="generalInfoDiv rowdiv">
+      <div class="marginRightDiv">
+        <h1>First Name</h1>
+        <p class="childElement">Zi Hao</p>
+      </div>
+      <div class="marginRightDiv">
+        <h1>Last Name</h1>
+        <p class="childElement">Fong</p>
+      </div>
+      <div>
+        <h1>Location</h1>
+        <img class="locationImage" src="../assets//singapore_flag.png" />
+      </div>
+    </div>
+
+    <div class="generalDiv">
+      <h1>GitHub URL</h1>
+      <a href="https://github.com/Zack-Fong" class="childElement">
+        https://github.com/Zack-Fong
+      </a>
+    </div>
+
+    <div class="generalDiv">
+      <h1>Hobbies</h1>
+      <ul>
+        <li>Read</li>
+        <li>Watch Dramas</li>
+      </ul>
+    </div>
+
+    <div class="generalDiv">
+      <h1>About Myself</h1>
+      <p class="childElement">
+        I enjoy spending time with myself as a form of recharge. Normally I will
+        explore cafes and read book, play games or wait dramas.
+      </p>
+    </div>
+  </body>
 </html>
