--- a/assignment/index.html
+++ b/assignment/index.html
@@ -22,7 +22,11 @@
 
     <div class="generalDiv">
       <h1>GitHub URL</h1>
-      <a href="https://github.com/Zack-Fong" class="childElement">
+      <a
+        href="https://github.com/Zack-Fong"
+        target="_blank"
+        class="childElement"
+      >
         https://github.com/Zack-Fong
       </a>
     </div>
