--- a/src/index.html
+++ b/src/index.html
@@ -1,6 +1,6 @@
 <html>
     <head>
-        <link rel="stylesheet" href="styles.css" />
+        <link rel="stylesheet" href="./profilestyle.css" />
         <title>My Profile</title>
     </head>
     <body>
