added assignment and modifications in assignments folder

--- a/assignment/index.html
+++ b/assignment/index.html
@@ -1,8 +1,63 @@
+<!DOCTYPE html>
 <html>
-    <head>
-        <link rel="stylesheet" href="styles.css" />
-    </head>
-    <body>
-        <!-- Add Code Here -->
-    </body>
+<head>
+	<title>LOW WEI AKNG</title>
+	<link rel="stylesheet" type="text/css" href="style.css">
+	<link rel=”stylesheet” href=”https://stackpath.bootstrapcdn.com/bootstrap/5.0.0-alpha1/css/bootstrap.min.css”rel=”nofollow” integrity=”sha384-r4NyP46KrjDleawBgD5tp8Y7UzmLA05oM1iAEQ17CSuDqnUK2+k9luXQOfXJCJ4I” crossorigin=”anonymous”>
+</head>
+
+<body>
+<section class="" ="sec1">
+	<div class="cdiv1">
+	 <a href="index.html">LOW WEI KANG</a>
+	 <a href="hobbies.html">HOBBIES</a>
+	</div></section></br>
+
+
+	 <div class="cdiv2">
+		<img src="images/personalPicture.jpg" >
+	 </div>
+
+	 <div class="cdiv3">
+		<p>I am Wei Kang. I enjoy playing board games and drawing.<br>
+		 My taste in music is eclectic;<br>
+		my 2022 spotify rewind included Japanese Piano, Experimental rock and a worrying amount of Acid Jazz.<br>
+			But before you judge me, go give 'Colonel Panic' by 'The Fearless Flyers, Vulf' a listen. It will change your world.</p>
+		<p>I am an electrical engineer hoping to making a career change to Software Programming as a fullstack programmer.</p>
+		<p>Check Out my full profile at <a href="https://www.linkedin.com/in/wei-kang-low-24a918151/" target ="_blank">Linkedin</a></p>
+		</div><br>
+
+	 <div class="cdiv4">
+	 	<p>
+	 		<strong>Contacts</strong>
+	 	</p>
+	 	<p>
+	 		GITHUB: https://github.com/BowlOfOwls
+		 </p>
+	 	<p>
+			 <strong>Country of Origins:</strong>
+		 </p>
+		<p>
+            <!-- image taken from https://wallpapercave.com/singapore-flag-wallpapers -->
+				<img src="images/singaporeFlag.jpg"
+				style="max-width: 5%;" />
+		 </p>
+	 	<p>
+			 <strong>Hobbies:</strong>
+		 </p>
+		<p>
+		 
+		<ul > 
+			<li>Boardgames</li> 
+			<li>Movies</li> 
+			<li>Drawing</li> 
+			<li>Exercising</li> 
+		</ul>
+		 
+	 </div>
+<section>
+	
+</section>
+
+</body>
 </html>
