--- a/assignment/index.html
+++ b/assignment/index.html
@@ -1,8 +1,27 @@
-<html>
-    <head>
-        <link rel="stylesheet" href="styles.css" />
-    </head>
-    <body>
-        <!-- Add Code Here -->
-    </body>
+<!DOCTYPE html>
+<html lang="en">
+  <head>
+    <meta chartset="UTF-8" />
+    <title>Jian Sheng's Profile</title>
+    <link rel="stylesheet" href="styles.css" />
+  </head>
+  <body>
+    <h1>Description</h1>
+    <img src="image/Photo.jpg" alt="An image of Jian Sheng" />
+    <p>
+      I am project manager with strong track record in project delivery with
+      <em>8</em> years of experience in public and private organisations.
+    </p>
+    <h2>Contact Detail</h2>
+
+    <p>
+      Linkedin:
+      <a href="/6m-software-1.2-cli-git/assignment/Links/linkedin.html"
+        >Click Here</a
+      >
+    </p>
+    <p>Email :jiansh3ng@gmail.com</p>
+
+    <!-- Add Code Here -->
+  </body>
 </html>
