--- a/assignment/index.html
+++ b/assignment/index.html
@@ -8,11 +8,23 @@
   <body>
     <h1>Description</h1>
     <img src="image/Photo.jpg" alt="An image of Jian Sheng" />
+    <p>Name: Jian Sheng Wee</p>
     <p>
       I am project manager with strong track record in project delivery with
       <em>8</em> years of experience in public and private organisations.
     </p>
-    <h2>Contact Detail</h2>
+    <h2>Detail</h2>
+    <p>Github URL: <ahref:"/https://github.com/jswee1"> Click here</p>
+    <div class="SG">
+      <p>Location: <img src="image/Singapore.jpg" alt="Singapore" /></p>
+    </div>
+    <ul>
+      <p>my hobbies are:</p>
+      <li>cats</li>
+      <li>anime</li>
+      <li>Gym</li>
+    </ul>
+    <h3>Contact</h3>
 
     <p>
       Linkedin:
