--- a/assignment/index.html
+++ b/assignment/index.html
@@ -1,8 +1,23 @@
 <html>
     <head>
         <link rel="stylesheet" href="styles.css" />
+        <title>Karen's Profile</title>
     </head>
     <body>
-        <!-- Add Code Here -->
+    <div class="content">
+        <h3 class="nameheader">Karen Lau</h3>
+        <img class="avatar" src="https://sportshub.cbsistatic.com/i/2021/03/16/a74aec46-7ba2-46db-905e-52d7f5801fc1/mad-jigglypuff-1069866.jpg" />
+        <p>My name is Karen and I am from Singapore <img class="sgflag" src="./img/sgflag.png" />. 
+            <br>Currently, I am playing <strong> <a href="https://www.tiktok.com/@bestgamingvideostiktok/video/7233445446377590059"> Zelda Tears of the Kingdom </strong> </a> on the Nintendo Switch. You get to do cool things like build destructive robots and ride on glowing dragons. I can't imagine why anyone would want to do anything else. </p>
+            <p>Here are some of my other interests:</p>
+        <ul>
+            <li>Bouldering</li>
+            <li>Calisthenics</li>
+            <li>Movies</li>
+            <li>Poetry, theatre, reading most things with words</li>
+        </ul>
+        <p>In my free time, I like learning new things and I especially enjoy exploring new areas related to movement. I just started picking up contemporary dance as it marries strength, flexibility, and grace, with creative expression. To the ire of my neighbours, I would eventually like to learn the drums in future. </p>
+        <p>Check out my full profile at <a href="https://linkedin.com/in/lauchengyeekaren">LinkedIn</a> or on <a href="https://github.com/squiggled">Github </a></p>
+    </div>
     </body>
 </html>
