--- a/assignment/index.html
+++ b/assignment/index.html
@@ -1,8 +1,55 @@
-<html>
+<!DOCTYPE html>
+<html lang="en">
     <head>
-        <link rel="stylesheet" href="styles.css" />
+        <title>About Me</title>
+        <style>
+            img.aboutme {
+                width: 100px;
+                border-radius: 50px;
+                float: left;
+                margin-right: 10px;
+                padding: 10px;
+                border: 4px;
+            }
+
+            img.location {
+                width: 100px;
+                border-radius: 10px;
+                float: left;
+                margin-right: 10px;
+            }
+
+            h1 {
+                font-weight: bolder;
+            }
+            p.firstname {
+                font-weight: bold;
+            }
+            p.lastname {
+                font-weight: bold;
+            }
+        </style>
     </head>
     <body>
-        <!-- Add Code Here -->
+        <img class="aboutme" src="/images/cat.jpg" alt="cat">
+        <br>
+        <h1>About Me</h1>
+        <br>
+        <p class="firstname">First Name: <u>Umairah</u></p>
+        <p class="lastname">Last Name: <u>Zailan</u></p>
+        <p class="githuburl">
+            <b>Github url:</b> <a href="https://github.com/getsuki" target="blank">getsuki</a></p>
+        <p class="location"><b>Location:</b><br>
+            <img class="location" src="/images/Flag_of_Singapore.png" alt="Singapore Flag"></p>
+        <br><br>
+        <p class="hobbies"><b>Hobbies:</b></p>
+            <ul>
+                <li>Powerlifting</li>
+                <li>Petting my cat</li>
+                <li>Reading</li>
+            </ul>
+        <p class="intro"><b>Short Paragraph about me:</b> <br>
+            Loves trying new things. Spends too much time online. Has a cat named Truffles. He is a good boi.</p>
+
     </body>
 </html>
