created website 1st commit

--- a/assignment/index.html
+++ b/assignment/index.html
@@ -1,8 +1,80 @@
-<html>
-    <head>
-        <link rel="stylesheet" href="styles.css" />
-    </head>
-    <body>
-        <!-- Add Code Here -->
-    </body>
+<html lang="en">
+  <head>
+    <title>Hanisah MK Webpage</title>
+    <style>
+      em {
+        color: red;
+        font-weight: bold;
+      }
+
+      img.myprofile {
+        width: 300px;
+        border-radius: 200px;
+        float: left;
+        margin-right: 50px;
+        margin-top: 50px;
+        margin-left: 50px;
+        margin-bottom: 50px;
+        padding-left: 10px;
+      }
+
+      img.myflag {
+        width: 50px;
+        margin: 10px;
+      }
+
+      p {
+        color: black;
+      }
+
+      h2 {
+        color: hotpink;
+      }
+
+      h3.myhobbies {
+        color: deeppink;
+      }
+      h3.myaboutme {
+        padding-left: 100px;
+        color: crimson;
+
+      }
+
+      p.myaboutme {
+        padding-left: 100px;
+      }
+    </style>
+    <link rel="stylesheet" href="styles.css" />
+  </head>
+  <body>
+    <img class="myprofile" src="profile pic.jpg" alt="Profile pic of Hanisah" />
+
+    <h1>Welcome to my webpage</h1>
+
+    <p>Hello! My name is Hanisah MK</p>
+    <p>https://github.com/hanisahmk</p>
+
+    <h2>Where am I now?</h2>
+
+    <p>
+      Currently in sunny Singapore
+    </p>
+    <p>     
+      <img class="myflag" src="singapore flag.png" alt="Singapore Flag" />
+    </p>
+
+    <h3 class="myhobbies">What are my hobbies?</h3>
+    <p> 
+      <ul>
+        <li>Travelling. <a href="countrymap.html"> Check out the countries I have visited!</a></li>
+        <li>Exploring new places of interest. Love trying new food, and visiting new art installations</li>
+        <li>Learning new languages. Currently learning my 5th language, Japanese, こんにちは~ </li>
+        <li>Taking photographs #ruleofthirdsrule </li>
+      </ul>
+    </p>
+
+    <h3 class="myaboutme">About me</h3>
+    <p class="myaboutme"> For the past 5 years, I have been researching on cancer. Although researching on cancer on the laboratory bench is important for the advancement of cures, diagnosis and treatment of cancer; programmes or applications that will assist in this advancement are equally important. My immediate goals after completion of the course if to further upskill and create a programme or digital product to aid in the cancer research or science in general.</p>
+
+  </body>
 </html>
