Assignment 2nd commit

--- a/assignment/index.html
+++ b/assignment/index.html
@@ -20,7 +20,9 @@
 
       img.myflag {
         width: 50px;
+        height: auto;
         margin: 10px;
+        display: ;
       }
 
       p {
@@ -34,6 +36,7 @@
       h3.myhobbies {
         color: deeppink;
       }
+
       h3.myaboutme {
         padding-left: 100px;
         color: crimson;
@@ -52,29 +55,30 @@
     <h1>Welcome to my webpage</h1>
 
     <p>Hello! My name is Hanisah MK</p>
-    <p>https://github.com/hanisahmk</p>
+    <p><a href="https://github.com/hanisahmk">My GitHub account</a></p>
 
-    <h2>Where am I now?</h2>
+    <h2>Look for me:</h2>
 
     <p>
-      Currently in sunny Singapore
+      In sunny <em>Singapore</em>
     </p>
     <p>     
       <img class="myflag" src="singapore flag.png" alt="Singapore Flag" />
     </p>
 
-    <h3 class="myhobbies">What are my hobbies?</h3>
+    <h3 class="myhobbies">A few of my hobbies:</h3>
     <p> 
       <ul>
         <li>Travelling. <a href="countrymap.html"> Check out the countries I have visited!</a></li>
-        <li>Exploring new places of interest. Love trying new food, and visiting new art installations</li>
+        <li>Exploring new places. Love trying new food, and visiting new art installations</li>
         <li>Learning new languages. Currently learning my 5th language, Japanese, こんにちは~ </li>
         <li>Taking photographs #ruleofthirdsrule </li>
       </ul>
     </p>
 
-    <h3 class="myaboutme">About me</h3>
-    <p class="myaboutme"> For the past 5 years, I have been researching on cancer. Although researching on cancer on the laboratory bench is important for the advancement of cures, diagnosis and treatment of cancer; programmes or applications that will assist in this advancement are equally important. My immediate goals after completion of the course if to further upskill and create a programme or digital product to aid in the cancer research or science in general.</p>
-
+    <h3 class="myaboutme">More about me:</h3>
+    <div>
+        <p class="myaboutme"> For the past 5 years, I have been researching on cancer. Although researching on cancer on the laboratory bench is important for the advancement of cures, diagnosis and treatment of cancer; programmes or applications that will assist in this advancement are equally important. My immediate goals after completion of the course is to further upskill and create a programme or digital product to aid in the cancer research or science in general.</p>
+    </div>
   </body>
 </html>
