--- a/assignment/index.html
+++ b/assignment/index.html
@@ -1,56 +1,13 @@
+<!DOCTYPE html>
 <html lang="en">
   <head>
-    <title>Hanisah MK Webpage</title>
-    <style>
-      em {
-        color: red;
-        font-weight: bold;
-      }
-
-      img.myprofile {
-        width: 300px;
-        border-radius: 200px;
-        float: left;
-        margin-right: 50px;
-        margin-top: 50px;
-        margin-left: 50px;
-        margin-bottom: 50px;
-        padding-left: 10px;
-      }
-
-      img.myflag {
-        width: 50px;
-        height: auto;
-        margin: 10px;
-        display: ;
-      }
-
-      p {
-        color: black;
-      }
-
-      h2 {
-        color: hotpink;
-      }
-
-      h3.myhobbies {
-        color: deeppink;
-      }
-
-      h3.myaboutme {
-        padding-left: 100px;
-        color: crimson;
-
-      }
-
-      p.myaboutme {
-        padding-left: 100px;
-      }
-    </style>
-    <link rel="stylesheet" href="styles.css" />
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+        <title>Hanisah MK Webpage</title>
+    <link rel="stylesheet" type="text/css" href="styles.css" />
   </head>
   <body>
-    <img class="myprofile" src="profile pic.jpg" alt="Profile pic of Hanisah" />
+    <img class="myprofile" src="profile_pic.jpg" alt="Profile pic of Hanisah" />
 
     <h1>Welcome to my webpage</h1>
 
@@ -59,26 +16,43 @@
 
     <h2>Look for me:</h2>
 
+    <p>In sunny <em>Singapore</em></p>
     <p>
-      In sunny <em>Singapore</em>
-    </p>
-    <p>     
-      <img class="myflag" src="singapore flag.png" alt="Singapore Flag" />
+      <img
+        class="myflag"
+        src="singapore_flag_border.png"
+        alt="Singapore Flag"
+      />
     </p>
 
     <h3 class="myhobbies">A few of my hobbies:</h3>
-    <p> 
-      <ul>
-        <li>Travelling. <a href="countrymap.html"> Check out the countries I have visited!</a></li>
-        <li>Exploring new places. Love trying new food, and visiting new art installations</li>
-        <li>Learning new languages. Currently learning my 5th language, Japanese, こんにちは~ </li>
-        <li>Taking photographs #ruleofthirdsrule </li>
-      </ul>
-    </p>
+    <ul>
+      <li>
+        Travelling.
+        <a href="countrymap.html"> Check out the countries I have visited!</a>
+      </li>
+      <li>
+        Exploring new places. Love trying new food, and visiting new art
+        installations
+      </li>
+      <li>
+        Learning new languages. Currently learning my 5th language, Japanese,
+        こんにちは~
+      </li>
+      <li>Taking photographs #ruleofthirdsrule</li>
+    </ul>
 
     <h3 class="myaboutme">More about me:</h3>
     <div>
-        <p class="myaboutme"> For the past 5 years, I have been researching on cancer. Although researching on cancer on the laboratory bench is important for the advancement of cures, diagnosis and treatment of cancer; programmes or applications that will assist in this advancement are equally important. My immediate goals after completion of the course is to further upskill and create a programme or digital product to aid in the cancer research or science in general.</p>
+      <p class="myaboutme">
+        For the past 5 years, I have been researching on cancer. <br />Although
+        researching on cancer on the laboratory bench is important for the
+        advancement of cures, diagnosis and treatment of cancer;
+        <br />programmes or applications that will assist in this advancement
+        are equally important. <br />My immediate goals after completion of the
+        course is to further upskill and create a programme or digital product
+        to aid in the cancer research or science in general.
+      </p>
     </div>
   </body>
 </html>
