done with assignment and quiz

--- a/assignment/index.html
+++ b/assignment/index.html
@@ -1,8 +1,37 @@
-<html>
-    <head>
-        <link rel="stylesheet" href="styles.css" />
-    </head>
-    <body>
-        <!-- Add Code Here -->
-    </body>
+<html lang="eng">
+  <head>
+    <link rel="stylesheet" href="styles.css" />
+    <title>Sufiyan's short biography</title>
+  </head>
+  <body>
+    <h1>This is a biography of Sufiyan</h1>
+    <img
+      class="profilepic"
+      src="images/Profile_pic.jpg"
+      alt="Profile pic of Sufiyan"
+    />
+    <p>My first name: Mohammad Sufiyan</p>
+    <p>My last name: Senin</p>
+    <p>
+      You can click on this
+      <a href="https://github.com/sufiyansenin">link</a> to go to my Github
+      account
+    </p>
+    <p>Location: </p>
+    <img class="flag" src="images/Singapore_flag.jpg" alt="Singapore flag" />
+    <p>
+      My hobbies are:
+      <ul>
+        <li>Playing futsal</li>
+        <li>Playing PC/PS5 games</li>
+        <li>Watching youtube videos</li>
+      </ul>
+    </p>
+    <div>
+      About me: I am 28 this year. I prefer to stay at home as most of my
+      hobbies don't require me to go outside. I am working in a desktop support
+      role now and am trying to advance my career in the IT world by taking this
+      course.
+    </div>
+  </body>
 </html>
