--- a/assignment/index.html
+++ b/assignment/index.html
@@ -1,8 +1,43 @@
 <html>
     <head>
         <link rel="stylesheet" href="styles.css" />
+        <title>My Personal Bio</title>
     </head>
     <body>
-        <!-- Add Code Here -->
+        <div class="main">
+            <h1>My Personal Bio</h1>
+
+            <div class="profile-picture">
+                <img src="profile-picture.png" alt="Profile Picture">
+            </div>
+
+            <div class="bio">
+                <h2><u>Personal Details </u></h2>
+                <p>First Name: Mohammad Khairul</p>
+                <p>Last Name: Bin Meske</p>
+                <p>GitHub Profile: <a href="https://github.com/Revvrel">Click Me</a></p>
+                <p>Country:</p>
+                <p><img src="singapore.png" alt="Singapore"></p>
+            </div>
+            
+            <div class="hobbies">
+                <h2><u>Hobbies</u></h2>
+                <ul>
+                    <li>Playing Video Games</li>
+                    <li>Buidling Gundam</li>
+                    <li>Travelling</li>
+                    <li>Anime</li>
+                    <li>Bowling</li>
+                </ul>
+            </div>
+
+            <div class="about">
+                <h2><u>About Me</u></h2>
+                <p>Hello. I'm Khairul and I have been working in the Hardware IT Industry for about 10 years.
+                    I am currently looking into a career change from Hardware IT into Software IT industry to
+                    pursue on what I have been doing during my Poly days.
+                </p>
+            </div>
+        </div>
     </body>
 </html>
