cleaned up code

--- a/assignment/index.html
+++ b/assignment/index.html
@@ -6,23 +6,24 @@
 
 <body>
     <!-- Add Code Here -->
-    <div id="profile-photo"><img class="circle-image"
-            src="profile.png"></div>
+    <div id="profile-photo"><img class="circle-image" src="profile.png"></div>
     <h1>ELLY CHIO</h1>
-    <hr style="width:50%">
+    <hr>
     <p>
-        Hi, I'm Elly from <img class="flag" src="flag.png">!
+        Hi, I'm Elly (Chio Yili) from <img class="flag" src="flag.png">!
     </p>
     <p>
-        After graduating from Computer Science in 2014, my journey led me to transition into the field of special needs education.
-        It was a deeply meaningful time, and I'm now excited for the next chapter of my life as I dive back into the tech sector!
+        After graduating from Computer Science in 2014, my journey led me to transition into the field of special needs
+        education.
+        It was a deeply meaningful time, and I'm now excited for the next chapter of my life as I dive back into the
+        tech sector!
     </p>
     <p>
-            Check out my <a href="https://github.com/chioyili">GitHub</a> :)
+        Check out my <a href="https://github.com/chioyili">GitHub</a> :)
     </p>
-    <div id="hobbies">
+    <div>
         Some of my favourite things:
-        <ul class="inline">
+        <ul>
             <li>Choir & music</li>
             <li>Learning languages</li>
             <li>Long walks</li>
