[Module-1.2] Assignment Submission

--- a/assignment/index.html
+++ b/assignment/index.html
@@ -1,8 +1,55 @@
-<html>
-    <head>
-        <link rel="stylesheet" href="styles.css" />
-    </head>
-    <body>
-        <!-- Add Code Here -->
-    </body>
+<!DOCTYPE html>
+<html lang="en">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <title>Melissa Koh</title>
+    <link rel="stylesheet" href="styles.css" />
+  </head>
+  <body>
+    <!-- <header>
+      <h1>Melissa Koh</h1>
+    </header> -->
+
+    <div id="profile">
+      <div id="banner"></div>
+      <img src="images/profile_pic.png" alt="Melissa Koh" />
+      <h1>Melissa Koh</h1>
+      <ul>
+        <li>
+          <strong>GitHub:</strong>
+          <a
+            href="https://github.com/merriemelly/6m-software-1.2-cli-git/tree/main"
+            target="_blank"
+            >merriemelly</a
+          >
+        </li>
+        <li>
+          <strong>Location:</strong>
+          Singapore
+        </li>
+        <li>
+          <strong>Hobbies:</strong>
+          <ul>
+            <li>Volleyball</li>
+            <li>Hiking</li>
+            <li>Yoga</li>
+          </ul>
+        </li>
+      </ul>
+      <p>
+        I am Melissa Koh, a passionate individual with a love for sports.
+        Engaging in physical activities has always been an integral part of my
+        life, and I find joy and fulfillment in the world of sports. Whether
+        it's running on the track, hitting the basketball court, or joining a
+        friendly game of volleyball, I thrive on the energy and camaraderie that
+        sports bring. Beyond the playing field, I am dedicated to maintaining a
+        healthy and active lifestyle. Sports not only keep me physically fit but
+        also teach me valuable lessons about teamwork, discipline, and
+        perseverance. I believe in the power of sports to inspire, unite, and
+        bring out the best in individuals, and I am excited to continue my
+        journey in the realm of athletics.
+      </p>
+    </div>
+  </body>
 </html>
