--- a/src/index.html
+++ b/src/index.html
@@ -4,18 +4,20 @@
         <title>My Profile</title>
     </head>
     <body>
-        <h3>Edison Zhuang</h3>
-        <img class="avatar" src="https://m.media-amazon.com/images/I/71qokUI2ypL._AC_SX679_.jpg" />
-        <p>My name is Edison. I am a software developer. I am proficient in:</p>
+        <h1>Yao Hai</h1>
+        <div class="tooltip"> Hi, My name is Yao Hai
+            <span class="tooltiptext">First name: Hai, Family name: Yao</span>
+        </div>
+        <p>I am working as software engineer using Ruby on Rails</p>
+        <p>I am from <img src="img/china.png" alt="A Chinese flag icon" class="flag-icon"> living in <img src="img/singapore.png" alt="A Singapore flag icon" class="flag-icon">
+        <p> I hope I could be proficient in languages and skills below by studying this course:</p>
         <ul>
-            <li>HTML</li>
-            <li>CSS</li>
             <li>JavaScript</li>
             <li>React</li>
             <li>Spring Boot</li>
             <li>DevOps</li>
             <li>React Native</li>
         </ul>
-        <p>Check out my full profile at <a href="https://linkedin.com/in/edisonzsq" />LinkedIn</p>
+        <p>Check out my Github at <a href="https://github.com/yaohai1216" />Github</p>
     </body>
 </html>
