--- a/assignment/index.html
+++ b/assignment/index.html
@@ -7,7 +7,7 @@
     <div class="profile_info">
       <h1>Ng Heng Khai</h1>
       <img class="profile_pic" src="profile_photo.jpg" />
-      <p>Hi, I'm name is Ng Heng Khai.</p>
+      <p>Hi, I'm Ng Heng Khai.</p>
       <p>I'm from <img class="country_flag" src="singapore_flag.png" /></p>
       <p>
         I am a tech enthusiast an like to keep up with the latest tech news!
