uploaded Biography homepage in assignment folder

--- a/assignment/index.html
+++ b/assignment/index.html
@@ -4,5 +4,23 @@
     </head>
     <body>
         <!-- Add Code Here -->
+        <h1>Personal Biography</h1>
+        <h2>Name</h2>
+            <p>Jason C. alias <italics>recharging</italics></p>
+        <h2>Github URL</h2>
+            <p>https://github.com/<italics>recharging</italics></p>
+        <h2>Location</h2>
+            <p>I am situated at 192.166.246.105, which is here!</p>
+            <a href="https://maps.app.goo.gl/naYrFDXa6wNA7TVn6" alt="My Location"><img src="singaporeflag.jpg" alt="Flag of Singapore"></a>
+        <h2>Hobbies</h2>
+            <ul><li>Motorcycling</li><a href="https://www.motorcyclespecs.co.za/model/suzu/suzuki_dr800%2090.htm" target="_blank"><img height=300px src="motorcycle.jpg" alt="Image of Motorcycle"></a><p>This is the last surviving Suzuki SR42B DR800 single cylinder twin carburetor dual sport motorcycle in Singapore. It faces extinction risk due to ever tightening vehicle inspection regulations. God speed the Desert Express. </p>
+            <li>Family</li><a href="https://www.snopes.com/fact-check/man-sues-wife-ugly-children/" target="_blank"><img height=200px src="family.jpg" alt="Image of Family"></a><p>This is my beautiful wife and kids. I spend too much time on them and not enough on the Desert Express. </p></ul>
+        <h2>Description</h2>
+            <p>I have a hardware and systems Engineering background. In this world of remote and offsite work, it helps to consider <italics>forking</italics> into software work.</p>
+            <p>After performing a SWOT analysis on my family and myself, I would love to be able to develop web and mobile applications as an additional <italics>branch</italics> of income!</p>
+            <p>I am <italics>committed</italics> towards engaging in the <italics>DevSecOps</italics> pipeline and have trained with:
+                <ul><li><strong>IBM Skillsfuture:</strong></li><p>Design Thinking, Cloud and Cybersecurity practitioner</p>
+                    <li><strong>ST Engineering COMAT:</strong></li><p>Completion of coursework for ECCouncil CEHv22, knowledge of web application vulnerabilities</li>
+                    <li><strong>NTU PACE-Skillsunion:</strong></li> <p>Front- and Backend Development</p> 
     </body>
 </html>
