--- a/src/index.html
+++ b/src/index.html
@@ -1,13 +1,15 @@
 <html>
     <head>
         <link rel="stylesheet" href="styles.css" />
-        <title>My Profile</title>
+        <title>My Portfolio</title>
     </head>
     <body>
-        <h3>Edison Zhuang</h3>
+        <h1>Terence Gaffud</h1>
+        <!-- h1 to h6 -->
         <img class="avatar" src="https://m.media-amazon.com/images/I/71qokUI2ypL._AC_SX679_.jpg" />
-        <p>My name is Edison. I am a software developer. I am proficient in:</p>
-        <ul>
+        <!-- img tags are self-closing tags -->
+        <p>My name is Terence. I am a software developer. I am proficient in:</p>
+        <ol>
             <li>HTML</li>
             <li>CSS</li>
             <li>JavaScript</li>
@@ -15,7 +17,8 @@
             <li>Spring Boot</li>
             <li>DevOps</li>
             <li>React Native</li>
-        </ul>
-        <p>Check out my full profile at <a href="https://linkedin.com/in/edisonzsq" />LinkedIn</p>
+            <li>Git</li>
+        </ol>
+        <p>Check out my full profile at <a href="https://linkedin.com/in/terence-gaffud" target="_blank"/>LinkedIn</p>
     </body>
 </html>
