--- a/assignment/index.html
+++ b/assignment/index.html
@@ -1,8 +1,27 @@
 <html>
     <head>
         <link rel="stylesheet" href="styles.css" />
+        <title>Stefano Kusuma Ali</title>
     </head>
     <body>
-        <!-- Add Code Here -->
+        <h1>Hi! My name is Stefano Kusuma Ali</h1>
+        <div class="align-vert">
+            <span>I am based in </span>
+            <img src="./Flag_of_Singapore.svg" class="flag">
+        </div>
+        <br>
+        <a href="https://www.linkedin.com/in/stefanokusumaali/">Click here to see my Linkedin!</a>
+        <h2>My hobbies</h2>
+        <ul>
+            <li>Walk in nature</li>
+            <li>Exercise</li>
+            <li>Travelling</li>
+        </ul>
+        <h2>About me</h2>
+        <p>
+            I am a structural engineer with interest in programming. <br>
+            In my day job I creates in-house program using C# and Phyton. <br>
+            During my free time I coded free software for strucutral engineers. <br>
+        </p>
     </body>
 </html>
