--- a/src/index.html
+++ b/src/index.html
@@ -1,10 +1,10 @@
 <html>
     <head>
         <link rel="stylesheet" href="styles.css" />
-        <title>My Profile</title>
+        <title>My Portfolio</title>
     </head>
     <body>
-        <h3>Edison Zhuang</h3>
+        <h3>Stefano Kusuma Ali</h3>
         <img class="avatar" src="https://m.media-amazon.com/images/I/71qokUI2ypL._AC_SX679_.jpg" />
         <p>My name is Edison. I am a software developer. I am proficient in:</p>
         <ul>
