--- a/src/index.html
+++ b/src/index.html
@@ -1,21 +1,31 @@
 <html>
-    <head>
-        <link rel="stylesheet" href="styles.css" />
-        <title>My Profile</title>
-    </head>
-    <body>
-        <h3>Edison Zhuang</h3>
-        <img class="avatar" src="https://m.media-amazon.com/images/I/71qokUI2ypL._AC_SX679_.jpg" />
-        <p>My name is Edison. I am a software developer. I am proficient in:</p>
-        <ul>
-            <li>HTML</li>
-            <li>CSS</li>
-            <li>JavaScript</li>
-            <li>React</li>
-            <li>Spring Boot</li>
-            <li>DevOps</li>
-            <li>React Native</li>
-        </ul>
-        <p>Check out my full profile at <a href="https://linkedin.com/in/edisonzsq" />LinkedIn</p>
-    </body>
+  <head>
+    <link rel="stylesheet" href="styles.css" />
+    <title>My Profile</title>
+  </head>
+  <body>
+    <h3>Ng Teck Guan</h3>
+    <!--h1 ti h6-->
+    <img
+      class="avatar"
+      src="https://m.media-amazon.com/images/I/71qokUI2ypL._AC_SX679_.jpg"
+    />
+    <p>My name is Edison. I am a software developer. I am proficient in:</p>
+    <span>This is an inline element</span>
+    <span>hey</span>
+    <ol>
+      <li>HTML</li>
+      <li>CSS</li>
+      <li>JavaScript</li>
+      <li>React</li>
+      <li>Spring Boot</li>
+      <li>DevOps</li>
+      <li>React Native</li>
+      <li>Git</li>
+    </ol>
+    <p>
+      Check out my full profile at
+      <a href="https://linkedin.com/in/edisonzsq" />LinkedIn
+    </p>
+  </body>
 </html>
