--- a/assignment/index.html
+++ b/assignment/index.html
@@ -1,22 +1,39 @@
 <html>
-    <head>
-        <link rel="stylesheet" href="styles.css" />
-    </head>
-    <body>
-        <h1>Harshit Chheda</h1>
-        <img src="https://scontent.fsin15-1.fna.fbcdn.net/v/t39.30808-1/271425194_10225288261606896_8668278537986441634_n.jpg?stp=dst-jpg_s200x200&_nc_cat=108&cb=99be929b-8d691acd&ccb=1-7&_nc_sid=5740b7&_nc_ohc=tx6ugWenO1wAX8nmjSL&_nc_ht=scontent.fsin15-1.fna&oh=00_AfA53HRHgkYN-C_Mu2wB2XFRXf2bviBvipPa5duaKcJ0Kg&oe=65E9CA6D" />
-        <h2>Github: <a href="https://github.com/harshit-cc" target="_blank">click here</a></h2>
-        <h2>Location: Singapore<p><img src="https://www.sg/NS60/assets/images/bitmap1.png"/></p></h2>
-        <h2>Hobbies:</h2>
-        <ul>
-            <li>Travel</li>
-            <li>Fitness</li>
-            <li>Technology</li>
-        </ul>
-        <h2>Short summary about me:</h2>
-        <div>
-            Throughout my career I have done different roles, took up different opportunities, different challenges in different business domains; and this has provided me a rich and broad experience enabling me to take up any new challenge that may come. Different roles were - Developer, Tech lead, BA, Product Owner, IT Support, IT Sales, Solution Architect, Scrum Master, Program/Delivery manager; and worked in different business domains - Payments, Ref data, Reconciliations, Listed Derivatives, Collateral management, Cash & liquidity management, etc. 
-            T-shaped professional passionate about learning new skills, taking up new challenge/opportunity, collaborating & building strong relationship, mentoring & developing teams, solving complex problems and delivering incrementally tangible business value.
-        </div>
-    </body>
+  <head>
+    <link rel="stylesheet" href="styles.css" />
+    <title>My bio page</title>
+  </head>
+  <body>
+    <img
+      src="https://scontent.fsin15-1.fna.fbcdn.net/v/t39.30808-1/271425194_10225288261606896_8668278537986441634_n.jpg?stp=dst-jpg_s200x200&_nc_cat=108&cb=99be929b-8d691acd&ccb=1-7&_nc_sid=5740b7&_nc_ohc=tx6ugWenO1wAX8nmjSL&_nc_ht=scontent.fsin15-1.fna&oh=00_AfA53HRHgkYN-C_Mu2wB2XFRXf2bviBvipPa5duaKcJ0Kg&oe=65E9CA6D"
+    />
+    <h1>Harshit Chheda</h1>
+    <h2>
+      Github:
+      <a href="https://github.com/harshit-cc" target="_blank">click here</a>
+    </h2>
+    <img src="https://www.sg/NS60/assets/images/bitmap1.png" />
+    <h2>Location: Singapore</h2>
+    <h2>Hobbies:</h2>
+    <ul>
+      <li>Travel</li>
+      <li>Fitness</li>
+      <li>Technology</li>
+    </ul>
+    <h2>Short summary about me:</h2>
+    <div class="summary">
+      Throughout my career I have done different roles, took up different
+      opportunities, different challenges in different business domains; and
+      this has provided me a rich and broad experience enabling me to take up
+      any new challenge that may come. Different roles were - Developer, Tech
+      lead, BA, Product Owner, IT Support, IT Sales, Solution Architect, Scrum
+      Master, Program/Delivery manager; and worked in different business domains
+      - Payments, Ref data, Reconciliations, Listed Derivatives, Collateral
+      management, Cash & liquidity management, etc. T-shaped professional
+      passionate about learning new skills, taking up new challenge/opportunity,
+      collaborating & building strong relationship, mentoring & developing
+      teams, solving complex problems and delivering incrementally tangible
+      business value.
+    </div>
+  </body>
 </html>
