Some more changes

--- a/assignment/index.html
+++ b/assignment/index.html
@@ -7,7 +7,7 @@
     <img
       src="https://scontent.fsin15-1.fna.fbcdn.net/v/t39.30808-1/271425194_10225288261606896_8668278537986441634_n.jpg?stp=dst-jpg_s200x200&_nc_cat=108&cb=99be929b-8d691acd&ccb=1-7&_nc_sid=5740b7&_nc_ohc=tx6ugWenO1wAX8nmjSL&_nc_ht=scontent.fsin15-1.fna&oh=00_AfA53HRHgkYN-C_Mu2wB2XFRXf2bviBvipPa5duaKcJ0Kg&oe=65E9CA6D"
     />
-    <h1>Harshit Chheda</h1>
+    <h1><b>Harshit Chheda</b></h1>
     <h2>
       Github:
       <a href="https://github.com/harshit-cc" target="_blank">click here</a>
