added img files and modified index.html and styles.css

--- a/src/index.html
+++ b/src/index.html
@@ -1,21 +1,36 @@
-<html>
-    <head>
-        <link rel="stylesheet" href="styles.css" />
-        <title>My Profile</title>
-    </head>
-    <body>
-        <h3>Edison Zhuang</h3>
-        <img class="avatar" src="https://m.media-amazon.com/images/I/71qokUI2ypL._AC_SX679_.jpg" />
-        <p>My name is Edison. I am a software developer. I am proficient in:</p>
-        <ul>
-            <li>HTML</li>
-            <li>CSS</li>
-            <li>JavaScript</li>
-            <li>React</li>
-            <li>Spring Boot</li>
-            <li>DevOps</li>
-            <li>React Native</li>
-        </ul>
-        <p>Check out my full profile at <a href="https://linkedin.com/in/edisonzsq" />LinkedIn</p>
-    </body>
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="styles.css"> 
+    <title>Esther's Profile [SE Cohort 6]</title>
+</head>
+<body>
+    <div class="container"> 
+        <!--<img src="../assets/EstherChin_website.svg" alt="Esther Chin's website" class="profile-picture"> -->
+        <div class="details"> 
+            <h1>Esther Chin</h1> 
+            <p>Birth country: Singapore
+                <img src="../assets/SG_map_flag.png" alt="The Singapore flag" class="profile-picture">
+            </p> 
+            <h2>Hobbies:</h2> 
+            <ul> 
+                <li>Coding</li> 
+                <li>Hiking</li> 
+                <li>Reading</li> 
+                <li>Classical Music</li> 
+            </ul> 
+            <p> 
+                Hi, I'm Esther. I am curious about most things - how things work and how they evolve. I am an aspiring full stack software engineer with a love for the outdoors. 
+                I believe in using technology for public good. Too many brilliant people are spending too much time in fancy AI stuff and developing eCommerce profiteering platforms. 
+                <br>
+                Why not use tech to better the lives of citizens and residents in Singapore? #TechForPublicGood
+                <br>
+                You can find me on <a href="https://github.com/Py-joy/">GitHub</a> and on <a href="https://www.linkedin.com/in/esther-chin-joyfulsound/"/>LinkedIn. 
+            </p> 
+        </div> 
+    </div> 
+    
+</body>
 </html>
